# USB-ALS

./: .gitignore  .template  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  wch.cmake
Debug/: debug.c
Peripheral/inc/: ch32x035_usb.h
User/: als.cpp  als.h  ch32x035_usbfs_device.c  ch32x035_usbfs_device.h  i2c.c  i2c.h  main.c  report.cpp  report.h
test_script/: hid_io.py
